--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,11 +39,11 @@ jobs:
             --acl public-read \
             --cache-control "max-age=86400"
           from: ~/project/target/testms-0.1.jar
-          to: 's3://lukecicleci/test/'
+          to: 's3://azlabs-circleci'
       - aws-s3/copy:
           arguments: --dryrun
           from: ~/project/target/testms-0.1.jar
-          to: 's3://lukecicleci/'
+          to: 's3://azlabs-circleci'
 workflows:
   version: 2
   build-test-and-approval-deploy:
