--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           arguments: --dryrun
           from: ~/project/target/as-0.0.1.jar
           to: 's3://azlabs-circleci/target/'
+          overwrite: true # default is false
 workflows:
   version: 2
   build-test-and-approval-deploy:
