--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,7 @@ jobs:
       - aws-s3/copy:
           arguments: --dryrun
           from: ~/project/target/as-0.0.1.jar
-          to: 's3://azlabs-circleci/target/'
-          overwrite: true # default is false
+          to: 's3://azlabs-circleci/target/        
 workflows:
   version: 2
   build-test-and-approval-deploy:
