--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,10 +40,9 @@ jobs:
           to: 's3://azlabs-circleci/target/'  
       - aws-s3/sync:
           arguments: |
-            --acl public-read \
             --cache-control "max-age=86400"
-          from: ~/project/target/testms-0.1.jar
-          to: 's3://lukecicleci/test/'        
+          from: ~/project/target/as-0.0.1.jar
+          to: 's3://azlabs-circleci'        
 workflows:
   version: 2
   build-test-and-approval-deploy:
