--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ workflows:
       - email/send:
           body: 'Please approve hold build process at https://app.circleci.com/pipelines/github/ivansimb/circle-uploadS3-adminservice'
           subject: CircleCI job started
-          to: ivan.simbolon@gmail.com
+          to: ivan.simbolon@gmail.com; gshockbca@gmail.com
       - build:
           requires:
             - hold
