--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,6 @@ jobs:
           path: ~/project/target/as-0.0.1.jar
       - store_artifacts:
           path: ~/project/target/as-0.0.1.jar
-      - persist_to_workspace:
-          root: ~/project/target/
-          paths: .
   build2:
     docker:
       - image: cimg/openjdk:15.0.1
@@ -83,6 +80,9 @@ workflows:
       - build:
           requires:
             - hold
+      - build2:
+          requires:
+            - hold      
       - deploy-to-s3:
           requires:
             - build
