--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   aws-s3: circleci/aws-s3@3.0
   email: cinotify/email@1.2.0
 jobs:
-  build:
+  build-lab:
     docker:
       - image: cimg/openjdk:15.0.1
     steps:
@@ -14,7 +14,7 @@ jobs:
       - restore_cache:
           key: circleci-java-maven-{{ checksum "/tmp/maven_cache_seed" }}
       - run:
-          command: mvn -Psit clean package
+          command: mvn -Plab clean package
           working_directory: ~/project    
       - save_cache:
           paths:
@@ -51,7 +51,7 @@ jobs:
       - persist_to_workspace:
           root: ~/project/target/
           paths: .        
-  deploy-to-s3:
+  deploy-to-s3-lab:
     docker:
       - image: 'cimg/python:3.9'
     steps:
@@ -89,7 +89,7 @@ workflows:
   version: 2
   build-test-and-approval-deploy:
     jobs:
-      - hold:
+      - hold-lab:
           type: approval
           requires:
             - email/send
