--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   aws-s3: circleci/aws-s3@3.0
   email: cinotify/email@1.2.0
 jobs:
-  build-lab:
+  build:
     docker:
       - image: cimg/openjdk:15.0.1
     steps:
